--- a/Jacksonville-Housing-Prices-Time-Series-Analysis.ipynb
+++ b/Jacksonville-Housing-Prices-Time-Series-Analysis.ipynb
@@ -41,8 +41,7 @@
     "## Table of Contents\n",
     "\n",
     "- [Understanding the Data](#Understanding-the-Data)\n",
-    "- [Exploratory Data Analysis (EDA)](#Exploratory-Data-Analysis(EDA))\n",
-    "\n",
+    "- [Exploratory Data Analysis](#Exploratory-Data-Analysis)\n",
     "- [Time Series Analysis](#Time-Series-Analysis)\n",
     "    - [Naive Model](#Naive-Model)\n",
     "    - [Model Building](#Model-Building)\n",
@@ -64,7 +63,7 @@
     "\n",
     "The main dataset is a collection of median housing prices from [Zillow](https://www.zillow.com/research/data/) dating back to 1996 and grouped by zip code. I will perform EDA and preprocess the data so that it is ready for time series analysis.\n",
     "\n",
-    "The data has been smoothed and the seasonality has been removed. This means the analysis will be simpler, but also means some information is lost. In the Appendix, I will use additional seasonal data from Zillow to demonstrate how a more nuanced analysis could be performed. Unfortunately, the seasonal data is only available by city instead of zip code, but it still offers some insight when forecasting future house prices."
+    "The data has been smoothed and the seasonality has been removed. This means the analysis will be simpler, but also means some information is lost. In the Appendix, I will use additional seasonal data from Zillow to demonstrate how a more nuanced analysis could be performed. Unfortunately, the seasonal data is not available by zip code, but it still offers some insight when forecasting future house prices."
    ]
   },
   {
@@ -592,26 +591,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "25"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "len(list(range(2000, 2025)))"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 6,
    "metadata": {},
    "outputs": [
@@ -702,7 +681,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We can see a fairly consistent pattern acros each zip code, though some seem to be growing faster than others. Since the clients budget is 275,000, I will limit the zip codes to those with a current median price between 200,000 and 300,000."
+    "We can see a fairly consistent pattern acros each zip code, though some seem to be growing faster than others. After discussing a budget range with the client, I will limit the zip codes to those with a current median price between 200,000 and 300,000."
    ]
   },
   {
