--- a/Jacksonville-Housing-Prices-Time-Series-Analysis.ipynb
+++ b/Jacksonville-Housing-Prices-Time-Series-Analysis.ipynb
@@ -567,11 +567,19 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The function below will take the data from each Jacksonville zip code and create a single average Jacksonville time series in long format."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# variables to be dropped during melt\n",
     "id_vars=['RegionID', 'SizeRank', 'RegionName', 'RegionType', 'StateName', 'State', 'City', 'Metro', 'CountyName']\n",
     "\n",
     "def aggregate_city_data(df):\n",
@@ -621,6 +629,13 @@
     "ax.set_yticklabels(['', '$100,000', '$150,000', '$200,000', '$250,000', '$300,000', '$350,000'])\n",
     "\n",
     "plt.savefig('graphs/jax_avg_housing_prices.png', bbox_inches='tight');"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Next, I will create a time series for each individual zip code in the Jacksonville area. I'll be keeping a list of the zip codes and a list of the time series for reference later."
    ]
   },
   {
@@ -683,7 +698,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We can see a fairly consistent pattern acros each zip code, though some seem to be growing faster than others. After discussing a budget range with the client, I will limit the zip codes to those with a current median price between 200,000 and 300,000."
+    "We can see a fairly consistent pattern acros each zip code, though some seem to be growing faster than others. The next step is determining what zip codes to consider, given the client's budget of $275,000.\n",
+    "\n",
+    "After discussing with the client, I have chosen to include all zip codes with a current price between $200,000 and $300,000. This will still provide the client with a wide range of price options, while removing zip codes that are well below or above their budget."
    ]
   },
   {
@@ -703,6 +720,13 @@
     "        \n",
     "for ts in budget_ts:\n",
     "    ts.dropna(inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "After accounting for the budget range, the number of zip codes I need to analyze has dropped from 56 to 14. Next, I want to examine the distribution of current prices, as well as the recent ROIs for each zip code."
    ]
   },
   {
@@ -772,6 +796,7 @@
    ],
    "source": [
     "fig,ax = plt.subplots()\n",
+    "\n",
     "# plot current median prices\n",
     "ax.bar(x=range(len(prices)), height=prices)\n",
     "\n",
@@ -850,11 +875,18 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "From the graph above, it seems that all the considered zip codes offer a solid ROI, though some have increased faster then others. The average 3-year ROI is near 50%, and around 90% for the 6-year ROI. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Time Series Analysis\n",
     "\n",
     "Now that I have examined historic housing prices, I will turn to creating a time series model. To do so, I will use the Dickey-Fuller test as a metric for determining the stationarity of the data, which is needed if I am to perform time series analysis. I will then need to determine the optimal order of the auto-regression(AR) and moving average(MA).\n",
     "\n",
-    "I will build an initial model using the Jacksonville average time series data, then repeat the process for each zip code. I can then forecast the price in 2 years and calculate the ROI for each zip code."
+    "I will build an initial model using the Jacksonville average time series data, then repeat the process for each zip code. I can then forecast the price in 2 years and calculate the expected ROI for each zip code."
    ]
   },
   {
@@ -920,7 +952,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "A p-value of 0.81 suggests that the data is non-stationary. Since the seasonality has already been smoothed, I can focus on de-trending the data. One way is to perform differencing, which creates a new time series that is takes the difference between each data point and the previous data point."
+    "A p-value of 0.81 suggests that the data is non-stationary. Since the seasonality has already been smoothed, I can focus on de-trending the data. One way is to perform differencing, which creates a new time series by taking the difference between each data point and the previous data point."
    ]
   },
   {
@@ -1031,7 +1063,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "An RMSE of \\$2408 is quite good, but this \"model\" has an obvious issue: it has no way to predict beyond 1 month. Trying to do so will cause the RMSE to quickly inflate, but it will serve fine as a benchmark."
+    "An RMSE of \\$2,408 is quite good, but this \"model\" has an obvious issue: it has no way to predict beyond 1 month. Trying to do so will cause the RMSE to quickly inflate, but it will serve fine as a benchmark."
    ]
   },
   {
@@ -1040,11 +1072,15 @@
    "source": [
     "#### Train-Test Split\n",
     "\n",
-    "In order to train the model, I will use a train-test split of 80-20, starting from 2012. The choice of split is especially important with the current dataset because of the change in behavior starting from early 2020. After this point in time, the housing prices begin to increase at a much faster rate before flattening out in the last few months. There are several factors for this, but the biggest one is the effect of the COVID pandemic and the resulting economic policies, such as a drastic and long-lasting reduction in the interest rate, which contributed to a rapid rise in house prices.\n",
+    "In order to train the model, I will use a train-test split of 80-20, starting from 2012. The choice of split is especially important with the current dataset because of the change in behavior starting from early 2020. After this point in time, the housing prices begin to increase at a much faster rate before flattening out in the last few months. There are several factors for this, but the biggest one is the effect of the COVID pandemic and the resulting economic policies, such as a drastic and long-lasting reduction in the interest rate, which contributed to a rapid rise in house prices. My training data ends near the beginning of COVID, and the test set consists of post-pandemic data.\n",
     "\n",
-    "By training a model on pre-pandemic data, it is almost guaranteed to struggle at accounting for the change in price growth in the test set. Ultimately, I decided to still create a model based on the training set because I believe that data is more indicative of the long term housing price growth, and as I will demonstrate in the Appendix, it appears that the market is undergoing a correction that will likely return it to pre-pandemic levels.\n",
+    "By training a model on pre-pandemic data, it is almost guaranteed to struggle at accounting for the change in price growth in the test set. This means that the model validation will suffer from a high RMSE. One alternative would be to forgo validation and simply use the entire dataset to create the model, but this is almost always considered bad practice. The one exception would be if I believed that the post-pandemic trend will be more indicative of growth over the next 2 years.\n",
     "\n",
-    "This decision will have implications for which model parameters I ultimately use, but should still provide good comparative metrics for the client to make an informed choice."
+    "Ultimately, I decided to create a model based on the training set because I believe that data is more indicative of the long term housing price growth, and as I will demonstrate in the Appendix, it appears that the market is undergoing a correction that will likely return it to pre-pandemic levels.\n",
+    "\n",
+    "This decision will have implications for which model parameters I ultimately use, but should still provide good comparative metrics for the client to make an informed choice.\n",
+    "\n",
+    "The graph below visualizes the train-test split, and demonstrates the huge difference in average yearly growth. Post-COVID housing prices are increasing at over twice the rate of pre-pandemic prices, despite the price drop at the end of 2023."
    ]
   },
   {
@@ -1084,31 +1120,6 @@
     "plt.legend(fontsize=14)\n",
     "\n",
     "plt.savefig('graphs/train_test_split.png', bbox_inches='tight');"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 20,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "value    51039.493208\n",
-       "dtype: float64"
-      ]
-     },
-     "execution_count": 20,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "(X.loc['2020-10-31'] - X.iloc[0])/5\n",
-    "(X.iloc[-1] - X.loc['2020-11-30'])/2\n",
-    "\n",
-    "# X['2020-10-31'] - X[0]\n",
-    "# X['2020-11-30':]"
    ]
   },
   {
@@ -1186,7 +1197,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The result was an order of (0,2,1). The model is slightly non-normal, as indicated by the high Jarque-Bera score, but it is the model with the highest AIC. I will use this to fit an ARIMA model and examine the diagnostics."
+    "The result was an order of (0,2,1). The model is slightly non-normal, as indicated by the high Jarque-Bera score, but it is the model with the highest AIC. I will use these parameters to fit an ARIMA model and examine the diagnostics."
    ]
   },
   {
@@ -1209,6 +1220,7 @@
    ],
    "source": [
     "ARIMA_MODEL = ARIMA(train,\n",
+    "                    # use parameters identified by auto-arima\n",
     "                    order=(0,2,1),\n",
     "                    seasonal_order=(0,0,0,0), \n",
     "                    enforce_stationarity=False, \n",
@@ -1314,7 +1326,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "As expected, the model fails to account for the post-pandemic price boom, as shown in the RMSE of $29,488. One option is to instead use the entire dataset to create a model, but this leads to several issues. Below, I will create the model, and then discuss why it is not the best option despite the improvement in RMSE."
+    "As expected, the model fails to account for the post-pandemic price boom, as shown by the RMSE of $29,488. One option is to instead use the entire dataset to create a model, but this leads to several issues. Below, I will create the model, and then discuss why it is not the best option despite the improvement in RMSE."
    ]
   },
   {
@@ -1503,7 +1515,7 @@
    "source": [
     "As expected, the new model accounts for the trends in the test set, but the RMSE of $810 indicates the model is severly overfit. Using this model to forecast prices 2 years in the future also leads to impossible outcomes. By attempting to capture the trends in the test set, the model's parameters meant it was far more quick to react to changes in price, and predicted a drop in housing prices so steep that they would be in the negatives within a few years.\n",
     "\n",
-    "Obviously, that outcome is highly unlikely, and contributed to the decision to use only the training data when creating parameters for the model. Here is the final model:"
+    "Obviously, that outcome is highly unlikely, and contributed to the decision to use only the training data when creating parameters for the model. See the Appendix for additional analysis of expected trends over the next 2 years. Here is the final model, using the entire dataset:"
    ]
   },
   {
@@ -1629,7 +1641,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "While the forecast looks reasonable, the confidence interval is quite large. This is expected since I choose to create the model based on parameters from the training set. However, even if I had used the entire dataset, the change in trend would have lead to a large confidence interval regardless."
+    "While the forecast looks reasonable, the confidence interval is quite large. This is expected since I choose to create the model based on parameters from the training set. However, even if I had used the entire dataset, the change in trend would have lead to a large confidence interval regardless. This goes back to the data having 2 clear segments with differing trends pre- and post-pandemic. Add the fact that prices plateaued, and even dipped slightly, at the end of 2022, and there is a large degree of uncertainty in the model.\n",
+    "\n",
+    "This means that the specific predictions should not be considered sound. However, because the Jacksonville zip codes share similar trend patterns, it is reasonable to use these predictions only as relative comparisons."
    ]
   },
   {
@@ -1801,7 +1815,7 @@
    "source": [
     "## Results\n",
     "\n",
-    "It appears that all the models are predicting a drop in price over the next 2 years. While I suspect that the drop in prices may not hold for the full 2 years (see Appendix), the predictions provide the metric I need to make a recommendation to the client about which zip codes to look for a suitable house."
+    "It appears that all the models are predicting a drop in price over the next 2 years. While I suspect that the drop in prices may not hold for the full 2 years (see Appendix), the predictions provide the comparative metric I need to make a recommendation to the client about which zip codes to focus on."
    ]
   },
   {
@@ -1845,7 +1859,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Now that I have the final recommendations, I can proceed to the next step in the process with the client as they continue their search. Below is a map of the recommended zip codes.\n",
+    "Now that I have the final recommendation, I can proceed to the next step in the process with the client as they continue their search. Below is a map of the recommended zip codes.\n",
     "\n",
     "In order to create the highlighted zip codes, I need geojson data for Florida zip codes. The data I use can be found [here](https://github.com/OpenDataDE/State-zip-code-GeoJSON)."
    ]
